src/test/ui/parser/issue-68890-2.stderr
error: `?` may only modify trait bounds, not lifetime bounds
  --> $DIR/issue-68890-2.rs:3:15
   |
LL | type X<'a> = (?'a) +;
   |               ^

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-68890-2.rs:3:14
   |
LL | type X<'a> = (?'a) +;
   |              ^^^^^^^ help: use `dyn`: `dyn (?'a) +`
   |
   = note: `#[warn(bare_trait_objects)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2021 edition!
   = note: for more information, see issue #80165 <https://github.com/rust-lang/rust/issues/80165>

error[E0224]: at least one trait is required for an object type
  --> $DIR/issue-68890-2.rs:3:14
   |
LL | type X<'a> = (?'a) +;
   |              ^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0224`.
